feat: pre-deploy status
